@@ -151,6 +151,9 @@ static int log_helper(log_t log, unsigned int level,
         "Error: "
     };
 
+    if (log == LOG_DEFAULT && log_file == NULL) 
+	return archdep_default_logger(level_strings[level], format, ap);
+
     if (log == LOG_ERR
         || (log != LOG_DEFAULT && logs[(unsigned int) log] == NULL)
         || log_file == NULL) 
